--- a/data/xunsearch/demo.ini
+++ b/data/xunsearch/demo.ini
@@ -1,7 +1,10 @@
 project.name = demo
 project.default_charset = utf-8
-server.index = 118.190.67.106:8383
-server.search = 118.190.67.106:8384
+#server.index = 118.190.67.106:8383
+#server.search = 118.190.67.106:8384
+
+server.index = 192.168.99.100:8383
+server.search = 192.168.99.100:8384
 
 [id]
 type = id
