--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
 		"hightman/xunsearch": "^1.4",
 		"limingxinleo/support-str": "^1.0",
 		"phalcon/incubator": "^3.0",
-		"emojione/emojione": "^3.1"
+		"emojione/emojione": "^3.1",
+		"phpoffice/phpexcel": "^1.8",
+		"limingxinleo/utils-excel": "^0.0.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^5.6",
