--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
 		"phalcon/incubator": "^3.0",
 		"emojione/emojione": "^3.1",
 		"phpoffice/phpexcel": "^1.8",
-		"limingxinleo/utils-excel": "^0.0.1"
+		"limingxinleo/utils-excel": "^0.0.1",
+		"apache/thrift": "^0.10.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^5.6",
