--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
 		"emojione/emojione": "^3.1",
 		"phpoffice/phpexcel": "^1.8",
 		"limingxinleo/utils-excel": "^0.0.1",
-		"apache/thrift": "^0.10.0"
+		"apache/thrift": "^0.10.0",
+		"limingxinleo/support-schedule": "^0.0.2"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^5.6",
