--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.6",
         "ext-phalcon": "^3.0",
-        "limingxinleo/phalcon-utils": "^1.3",
+        "limingxinleo/phalcon-utils": "dev-master",
         "vlucas/phpdotenv": "^2.4",
         "limingxinleo/limx-redis": "^1.0",
         "endroid/qrcode": "^1.7",
