--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "apache/thrift": "^0.10.0",
         "limingxinleo/support-schedule": "^0.0.2",
         "limingxinleo/phalcon-utils": "^1.3.2",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "symfony/ldap": "^3.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.6",
