--- a/limingxinleo/phalcon-eager-loading/composer.json
+++ b/limingxinleo/phalcon-eager-loading/composer.json
@@ -13,5 +13,8 @@
             "Xin\\Phalcon\\": "src"
         }
     },
-    "require": {}
+    "require": {
+        "php": ">=5.6",
+        "ext-phalcon": "^3.0"
+    }
 }
